# anypod

./: 10_podcast.md  Cargo.toml  PLAN.md  README.md  TODO.md  TOGEN.md
generated_prompts/: 2025-08-25-news_summary-prompt-2025-08-26.md  2025-08-25-news_summary-youtube-desc-2025-08-26.txt  2025-08-27-2025-08-27-news_summary-prompt.md  2025-08-27-2025-08-27-news_summary-youtube-desc.txt  2025-08-27-Jet-Nemotron-paper_deep_dive-prompt.md  2025-08-27-Jet-Nemotron-paper_deep_dive-youtube-desc.txt  2025-08-29-2025-08-29-news_summary-prompt.md  2025-08-29-2025-08-29-news_summary-youtube-desc.txt  2025-08-30-2025-08-30-news_summary-prompt.md  2025-08-30-2025-08-30-news_summary-youtube-desc.txt  2025-09-02-2025-09-02-news_summary-prompt.md  2025-09-02-2025-09-02-news_summary-youtube-desc.txt  2025-09-02-ColPali-paper_deep_dive-prompt.md  2025-09-02-ColPali-paper_deep_dive-youtube-desc.txt  2025-09-03-2025-09-03-news_summary-prompt.md  2025-09-03-2025-09-03-news_summary-youtube-desc.txt  2025-09-03-2407.01449v6-ColPali-paper_deep_dive-prompt.md  2025-09-03-2407.01449v6-ColPali-paper_deep_dive-youtube-desc.txt  2025-09-04-2025-09-04-open-pipe-open_source_summary-prompt.md  2025-09-04-2025-09-04-open-pipe-open_source_summary-youtube-desc.txt  2025-09-06-2025-09-06-news_summary-prompt.md  2025-09-06-2025-09-06-news_summary-youtube-desc.txt  2025-09-07-2025-09-07-2509.01092-REFRAG-paper_deep_dive-prompt.md  2025-09-07-2025-09-07-2509.01092-REFRAG-paper_deep_dive-youtube-desc.txt  2025-09-09-2025-09-09-news_summary-prompt.md  2025-09-09-2025-09-09-news_summary-youtube-desc.txt  (+49 more)
(+58 files in other folders)
