[package]
name = "anypod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"
google-youtube3 = "6.0.0"
yup-oauth2 = "12.1.0"
hyper = { version = "1.7.0", features = ["client"] }
hyper-rustls = "0.27.7"
dirs = "6.0.0"
hyper-util = { version = "0.1.16", features = ["client-legacy"] }
